# luxor-hub

./: .env  .env.example  .gitignore  .replit  .trigger  .vercelignore  IOS_BUILD.md  QDRANT_SETUP.md  README.md  _headers  api_interact.py  arabic_bot.py  arabic_kb_prompt.py  bot_concurrent.py  bot_core.py  bot_keepalive.sh  build.sh  build_arabic_kb.py  build_topic_index.py  capacitor.config.json  capacitor.config.ts  cleanup_items.py  click_draft.py  closet_items.json  color_dictionary.json  complete_workflow.sh  config.toml  content_queue.json  cookies_curl.json  cookies_quora_working.json  cookies_x.json  debug_composer.py  debug_quora_body.py  debug_quora_draft.py  debug_quora_editor.py  debug_quora_page.py  debug_x_composer2.py  debug_x_direct_click.py  debug_x_network.py  debug_x_submit.py  (+138 more)
.lovable/: plan.md
aa_books/: Fashion Designer_OCR.txt  Fashion Sewing_OCR.txt  Field Guide_OCR.txt  Guide FS_OCR.txt  Zandra Rhodes_OCR.txt
android/: capacitor.settings.gradle  gradle.properties
api/: index.py
assets/: Analytics-D7Lmu1PY.js  Analytics-ag_QG9OM.js  AppLayout-C6rb0L5b.js  AppLayout-DlDq20AE.js  Auth-CkiGcNN1.js  Auth-DBID8hSv.js  Badges-CGOTEaAA.js  Badges-DfEl911k.js  Blog-BUZL9yV8.js  Blog-Dd50Gb-o.js  BlogArticle-B2X6rIsJ.js  BlogArticle-Bo94MWyq.js  BodyShapeIllustration-Be38Tqiv.js  BodyShapeIllustration-BhluUP8X.js  BottomNav-DFYzGWnU.js  BottomNav-DV_NI4ER.js  Calibration-CNe2zg3k.js  Calibration-Dg1-r8xf.js  Chat-CfyeHaFI.js  Chat-DHqntcxM.js  Closet-CRvqiAfd.js  Closet-Cln-3eSE.js  ColorType-BiZGZm4i.js  ColorType-D6nskYmT.js  Council-CNkpVBJ_.js  (+288 more)
(+976 files in other folders)
