[project]
name = "shannon-omega"
version = "2.0.0"
description = "SHANNON-Ω — DeepSeek V4 Flash Free + Alex Hormozi AI Bot"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.10"

[project.scripts]
run-bot = "run_bot:main"
annihilate = "heretic.main:main"
media-tools = "media_tools:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "api: marks tests that need API access",
]

[tool.coverage.run]
source = ["bot_core", "plugins"]
omit = ["*/tests/*"]
